--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -36,7 +36,7 @@
             <TextBlock x:Name="TxtSelectedUsers" Text="Seçilen: Yok" FontStyle="Italic" Margin="0,0,0,5" TextWrapping="Wrap"/>
             
             <Button x:Name="BtnFindPath" Content="📍 En Kısa Yolu Çiz" Click="BtnFindPath_Click" Padding="5" Background="#90EE90"/>
-            
+            <Button x:Name="BtnDijkstra" Content="📏 Dijkstra (Mesafe Bazlı)" Click="BtnDijkstra_Click" Padding="5" Background="#ADD8E6" Margin="0,5,0,0"/>
             <Button Content="Temizle" Click="BtnClear_Click" Margin="0,5,0,0" Padding="5"/>
         </StackPanel>
     </Grid>
