--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -54,6 +54,7 @@
             </ListView>
 
             <Button x:Name="BtnDFS" Content="🔍 DFS ile Tara (Tümünü Bul)" Click="BtnDFS_Click" Padding="5" Background="#E6E6FA" Margin="0,10,0,0"/>
+            <Button x:Name="BtnComponents" Content="🧩 Ayrık Grupları Bul" Click="BtnComponents_Click" Padding="5" Background="#FFDAB9" Margin="0,5,0,0"/>
         </StackPanel>
     </Grid>
 </Window>
